fix example ui scaling when scaling down on mobile. corrected text alignment on medium and lower screen sizes

--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body {
   flex-flow: column nowrap;
   background-color:  hsl(270, 20%, 96%);
   height: auto;
-  width: 400px;
+  width: 460px;
+  max-width: 480px;
   border-radius: 32px;
   margin: 0 auto;
 }
@@ -220,7 +221,7 @@ body {
   flex-flow: column nowrap;
   align-items: flex-start;
   justify-content: center;
-  padding-left: 20%;
+  padding-left: 10vw;
   margin-right: auto;
 }
 
@@ -235,7 +236,7 @@ body {
 }
 
 
-@media only screen and (max-width:800px) {
+@media only screen and (max-width:950px) {
   body {
     width: 100%;
   }
@@ -260,7 +261,7 @@ body {
 
   .phone-preview-outer {
     width: 100vw;
-    transform: scale(0.75);
+    transform: scale(0.75) scaleX(1.25) scaleY(1.25);
     width: 75%;
     height: 75%;
     margin: 0 auto;
@@ -271,7 +272,7 @@ body {
   }
 
   .splash-text {
-    width: 100%;
+    width: 75%;
     margin: 0 auto;
     padding: 20px;
   }
@@ -279,6 +280,7 @@ body {
   .splash-title {
     font-size: 2rem;
     margin: 0 auto;
+    text-align: center;
   }
 
   .splash-paragraph {
@@ -288,7 +290,7 @@ body {
 
 @media only screen and (max-width: 500px) {
   .phone-preview-outer {
-    transform: scale(0.5);
+    transform: scale(0.5) scaleX(1.5) scaleY(1.5);
     width: 100%;
     height: 100%;
   }
